--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 fine_tuned_megaDNA_model.pt
 2Mar2025_phages_downloaded_from_genbank.gb
 notebook/megaDNA_phage_145M.pt
-__pycache
+__pycache__
+progressive_fine_tuned_megaDNA_model.pt
